[UPD] aggiunte stilistiche header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-33"></div>
-                <div class="col-33"></div>
-                <div class="col-33"></div>
+                <div class="col-33 text-center py-10">
+                    <ul>
+                        <li><a href="">Donna</a></li>
+                        <li><a href="">Uomo</a></li>
+                        <li><a href="">Bambini</a></li>
+                    </ul>
+                </div>
+                <div class="col-33 text-center py-10">
+                    <img src="./img/boolean-logo.png" alt="Logo" id="logo">
+                </div>
+                <div class="col-33 text-center py-10">
+                    <img src="./img/heart.png" alt="" class="utility">
+                    <img src="./img/shopping-bag.png" alt="" class="utility">
+                </div>
             </div>
         </div>
     </header>
