[UPD] header completato

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <img src="./img/boolean-logo.png" alt="Logo" id="logo">
                 </div>
                 <div class="col-33 text-center py-10">
-                    <img src="./img/heart.png" alt="" class="utility">
-                    <img src="./img/shopping-bag.png" alt="" class="utility">
+                    <a href=""><img src="./img/user.png" alt="" class="utility"></a>
+                    <a href=""><img src="./img/white-heart.png" alt="" class="utility"></a>
+                    <a href=""><img src="./img/shopping-bag.png" alt="" class="utility"></a>
                 </div>
             </div>
         </div>
