--- a/index.html
+++ b/index.html
@@ -29,7 +29,29 @@
         </div>
     </header>
     <main>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-33">
+                    <img src="./img/1.webp" alt="">
+                </div>
+                <div class="col-33">
+                    <img src="./img/2.webp" alt="">
+                </div>
+                <div class="col-33">
+                    <img src="./img/3.webp" alt="">
+                </div>
+                <div class="col-33">
+                    <img src="./img/4.webp" alt="">
+                </div>
+                <div class="col-33">
+                    <img src="./img/5.webp" alt="">
+                </div>
+                <div class="col-33">
+                    <img src="./img/6.webp" alt="">
+                </div>
+                
+            </div>
+        </div>
     </main>
     <footer>
 
