[UPD] aggiunte stilistiche immagini

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-33 text-center py-10">
+                <div class="col-33 text-center py-10 orange">
                     <ul>
                         <li><a href="">Donna</a></li>
                         <li><a href="">Uomo</a></li>
                         <li><a href="">Bambini</a></li>
                     </ul>
                 </div>
-                <div class="col-33 text-center py-10">
+                <div class="col-33 text-center py-10 orange">
                     <img src="./img/boolean-logo.png" alt="Logo" id="logo">
                 </div>
-                <div class="col-33 text-center py-10">
+                <div class="col-33 text-center py-10 orange">
                     <a href=""><img src="./img/user.png" alt="" class="utility"></a>
                     <a href=""><img src="./img/white-heart.png" alt="" class="utility"></a>
                     <a href=""><img src="./img/shopping-bag.png" alt="" class="utility"></a>
@@ -30,24 +30,24 @@
     </header>
     <main>
         <div class="container">
-            <div class="row">
-                <div class="col-33">
-                    <img src="./img/1.webp" alt="">
+            <div class="row margin">
+                <div class="col-33 py-10">
+                    <img src="./img/1.webp" alt="" class="clothes-img text-center">
                 </div>
-                <div class="col-33">
-                    <img src="./img/2.webp" alt="">
+                <div class="col-33 py-10">
+                    <img src="./img/2.webp" alt="" class="clothes-img text-center">
                 </div>
-                <div class="col-33">
-                    <img src="./img/3.webp" alt="">
+                <div class="col-33 py-10">
+                    <img src="./img/3.webp" alt="" class="clothes-img text-center">
                 </div>
-                <div class="col-33">
-                    <img src="./img/4.webp" alt="">
+                <div class="col-33 py-10">
+                    <img src="./img/4.webp" alt="" class="clothes-img text-center">
                 </div>
-                <div class="col-33">
-                    <img src="./img/5.webp" alt="">
+                <div class="col-33 py-10">
+                    <img src="./img/5.webp" alt="" class="clothes-img text-center">
                 </div>
-                <div class="col-33">
-                    <img src="./img/6.webp" alt="">
+                <div class="col-33 py-10">
+                    <img src="./img/6.webp" alt="" class="clothes-img text-center">
                 </div>
                 
             </div>
