--- a/index.html
+++ b/index.html
@@ -33,21 +33,46 @@
             <div class="row margin">
                 <div class="col-33 py-10">
                     <img src="./img/1.webp" alt="" class="clothes-img text-center">
+                    <p>Levi's</p>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
+                    <p class="label red">-50%</p>
+                    <p class="label green">Sostenibilità</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/2.webp" alt="" class="clothes-img text-center">
+                    <p>Guess</p>
+                    <h3>ROSES TEE</h3>
+                    <p><span>20,99&euro;</span> <del>29,99</del>&euro;</p>
+                    <p class="label red">-30%</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/3.webp" alt="" class="clothes-img text-center">
+                    <p>Come Zucchero Filato</p>
+                    <h3>VOGLIA DI COLORI PASTELLO</h3>
+                    <p><span>129,99&euro;</span> <del>184,99</del>&euro;</p>
+                    <p class="label red">-30%</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/4.webp" alt="" class="clothes-img text-center">
+                    <p>Levi's</p>
+                    <h3>TEE UNISEX</h3>
+                    <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
+                    <p class="label red">-50%</p>
+                    <p class="label green">Sostenibilità</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/5.webp" alt="" class="clothes-img text-center">
+                    <p>Maya Deluxe</p>
+                    <h3>STRIPE BODICE</h3>
+                    <p><span>99,99&euro;</span></p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/6.webp" alt="" class="clothes-img text-center">
+                    <p>Esprit</p>
+                    <h3>MAGLIONE -BLACK</h3>
+                    <p><span>29,99&euro;</span></p>
+                    <p class="label green">Sostenibilità</p>
                 </div>
                 
             </div>
