--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
                     <p class="label red">-50%</p>
                     <p class="label green">Sostenibilità</p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/2.webp" alt="" class="clothes-img text-center">
@@ -45,6 +46,7 @@
                     <h3>ROSES TEE</h3>
                     <p><span>20,99&euro;</span> <del>29,99</del>&euro;</p>
                     <p class="label red">-30%</p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/3.webp" alt="" class="clothes-img text-center">
@@ -52,6 +54,7 @@
                     <h3>VOGLIA DI COLORI PASTELLO</h3>
                     <p><span>129,99&euro;</span> <del>184,99</del>&euro;</p>
                     <p class="label red">-30%</p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/4.webp" alt="" class="clothes-img text-center">
@@ -60,12 +63,14 @@
                     <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
                     <p class="label red">-50%</p>
                     <p class="label green">Sostenibilità</p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/5.webp" alt="" class="clothes-img text-center">
                     <p>Maya Deluxe</p>
                     <h3>STRIPE BODICE</h3>
                     <p><span>99,99&euro;</span></p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 <div class="col-33 py-10">
                     <img src="./img/6.webp" alt="" class="clothes-img text-center">
@@ -73,13 +78,29 @@
                     <h3>MAGLIONE -BLACK</h3>
                     <p><span>29,99&euro;</span></p>
                     <p class="label green">Sostenibilità</p>
+                    <p class="label white">&hearts;</p>
                 </div>
                 
             </div>
         </div>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-50 black text-center">
+                    <h4>Booleando s.r.l</h4>
+                    <ul>
+                        <li><a href="">informazioni legali</a></li>
+                        <li><a href="">Informazioni sulla privacy</a></li>
+                        <li><a href="">Diritto di recesso</a></li>
+                    </ul>
+                </div>
+                <div class="col-50 black text-center">
+                    <h5>Trovaci anche su</h5>
+                    
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
