[UPD] completato stile footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
                 </div>
                 <div class="col-50 black text-center">
                     <h5>Trovaci anche su</h5>
-                    
+                    <a href=""><img src="./img/twitter.png" alt="" class="social"></a>
+                    <a href=""><img src="./img/facebook.png" alt="" class="social"></a>
+                    <a href=""><img src="./img/instagram.png" alt="" class="social"></a>
+                    <a href=""><img src="./img/youtube.png" alt="" class="social"></a>
                 </div>
             </div>
         </div>
