--- a/index.html
+++ b/index.html
@@ -32,53 +32,71 @@
         <div class="container">
             <div class="row margin">
                 <div class="col-33 py-10">
-                    <img src="./img/1.webp" alt="" class="clothes-img">
-                    <p>Levi's</p>
-                    <h3>RELAXED FIT TEE UNISEX</h3>
-                    <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
-                    <p class="label red">-50%</p>
-                    <p class="label green">Sostenibilità</p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/1.webp" alt="" class="clothes-img">
+                        <img src="./img/1b.webp" alt="" class="d-none">
+                        <p>Levi's</p>
+                        <h3>RELAXED FIT TEE UNISEX</h3>
+                        <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
+                        <p class="label red">-50%</p>
+                        <p class="label green">Sostenibilità</p>
+                        <div class="label-heart white">&hearts;</div>
+                    </div>
                 </div>
                 <div class="col-33 py-10">
-                    <img src="./img/2.webp" alt="" class="clothes-img">
-                    <p>Guess</p>
-                    <h3>ROSES TEE</h3>
-                    <p><span>20,99&euro;</span> <del>29,99</del>&euro;</p>
-                    <p class="label red">-30%</p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/2.webp" alt="" class="clothes-img">
+                        <img src="./img/2b.webp" alt="" class="d-none">
+                        <p>Guess</p>
+                        <h3>ROSES TEE</h3>
+                        <p><span>20,99&euro;</span> <del>29,99</del>&euro;</p>
+                        <p class="label red">-30%</p>
+                        <div class="label-heart white">&hearts;</div>
+                    </div>
                 </div>
                 <div class="col-33 py-10">
-                    <img src="./img/3.webp" alt="" class="clothes-img">
-                    <p>Come Zucchero Filato</p>
-                    <h3>VOGLIA DI COLORI PASTELLO</h3>
-                    <p><span>129,99&euro;</span> <del>184,99</del>&euro;</p>
-                    <p class="label red">-30%</p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/3.webp" alt="" class="clothes-img">
+                        <img src="./img/3b.webp" alt="" class="d-none">
+                        <p>Come Zucchero Filato</p>
+                        <h3>VOGLIA DI COLORI PASTELLO</h3>
+                        <p><span>129,99&euro;</span> <del>184,99</del>&euro;</p>
+                        <p class="label red">-30%</p>
+                        <div class="label-heart white">&hearts;</div>
+                    </div>
                 </div>
                 <div class="col-33 py-10">
-                    <img src="./img/4.webp" alt="" class="clothes-img">
-                    <p>Levi's</p>
-                    <h3>TEE UNISEX</h3>
-                    <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
-                    <p class="label red">-50%</p>
-                    <p class="label green">Sostenibilità</p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/4.webp" alt="" class="clothes-img">
+                        <img src="./img/4b.webp" alt="" class="d-none">
+                        <p>Levi's</p>
+                        <h3>TEE UNISEX</h3>
+                        <p><span>14,99&euro;</span> <del>29,99</del>&euro;</p>
+                        <p class="label red">-50%</p>
+                        <p class="label green">Sostenibilità</p>
+                        <div class="label-heart white">&hearts;</div>
+                        </div>
                 </div>
                 <div class="col-33 py-10">
-                    <img src="./img/5.webp" alt="" class="clothes-img">
-                    <p>Maya Deluxe</p>
-                    <h3>STRIPE BODICE</h3>
-                    <p><span>99,99&euro;</span></p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/5.webp" alt="" class="clothes-img">
+                        <img src="./img/5b.webp" alt="" class="d-none">
+                        <p>Maya Deluxe</p>
+                        <h3>STRIPE BODICE</h3>
+                        <p><span>99,99&euro;</span></p>
+                        <div class="label-heart white">&hearts;</div>
+                        </div>
                 </div>
                 <div class="col-33 py-10">
-                    <img src="./img/6.webp" alt="" class="clothes-img">
-                    <p>Esprit</p>
-                    <h3>MAGLIONE -BLACK</h3>
-                    <p><span>29,99&euro;</span></p>
-                    <p class="label green">Sostenibilità</p>
-                    <div class="label-heart white">&hearts;</div>
+                    <div class="content">
+                        <img src="./img/6.webp" alt="" class="clothes-img">
+                        <img src="./img/6b.webp" alt="" class="d-none">
+                        <p>Esprit</p>
+                        <h3>MAGLIONE -BLACK</h3>
+                        <p><span>29,99&euro;</span></p>
+                        <p class="label green">Sostenibilità</p>
+                        <div class="label-heart white">&hearts;</div>
+                    </div>
                 </div>
                 
             </div>
