--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="container fixed-position">
             <div class="row">
                 <div class="col-33 text-center py-10 orange">
                     <ul>
